--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,13 @@
-#log4j.rootLogger=DEBUG, STDOUT
-log4j.rootLogger=INFO, STDOUT
+log4j.rootLogger=INFO, STDOUT, FILE
 log4j.logger.deng=INFO
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT.layout.ConversionPattern=%d{HH:mm:ss} - %m%n
+log4j.appender.STDOUT.layout.ConversionPattern=%d{HH:mm:ss} | %C - %m%n
+
+log4j.appender.FILE=org.apache.log4j.FileAppender
+log4j.appender.FILE.File=logs.txt
+log4j.appender.FILE.ImmediateFlush=true
+log4j.appender.FILE.Threshold=debug
+log4j.appender.FILE.Append=false
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.conversionPattern=%d{HH:mm:ss} - %m%n
